# cuda-demo

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  cuda.cmake  fft.md  gtest.cmake  parse_pdf.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/common/inc/: predefine.h
src/demo/: CMakeLists.txt  main.cu
src/demo/inc/: kernel.h
src/demo/src/: kernel.cu
src/demo/test/: test_kernel.cpp
src/fft/: CMakeLists.txt
src/fft/inc/: fft.h
src/fft/src/: fft.cu  kernels.cu  kernels.h
src/fft/test/: test_fft.cpp  test_integration.py
